# quiz-app

./: .gitignore  README.md  asset-manifest.json  data.json  docker-compose.yml  index.html
backend/: Dockerfile  pyproject.toml
backend/api/: main.py
backend/database/: database.py  model.py
backend/src/api/: main.py
backend/src/database/: database.py
frontend/: .env  .env.example  Dockerfile  package-lock.json  package.json
frontend/nginx/: default.conf
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: AddQuestionPopup.css  AddQuestionPopup.js  QuizCard.css  QuizCard.js
static/css/: main.0a95e1a3.css  main.0a95e1a3.css.map
static/js/: main.031a3b58.js  main.031a3b58.js.map  main.a139dfd9.js  main.a139dfd9.js.map  main.ae7c35a1.js  main.ae7c35a1.js.map  main.bdb2a20d.js  main.bdb2a20d.js.map  main.c24f238c.js  main.c24f238c.js.map
